force-app/main/default/objects/Study_Site__c/Study_Site__c.object-meta.xml
<CustomObject>
    <!--compactLayoutAssignment>Study_Site</compactLayoutAssignment-->
    <description>Study Site Profile</description>

    <label>Study Site</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Site Name</label>

        <type>Text</type>
    </nameField>
    <pluralLabel>Study Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>