force-app/main/default/objects/Study_Site__c/fields/Account_Was_Changed__c.field-meta.xml
<CustomField>
    <fullName>Account_Was_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Was Changed</label>
    <type>Checkbox</type>
</CustomField>