force-app/main/default/objects/Study_Site__c/fields/Agrees_to_Referral_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Agrees_to_Referral_Reimbursement__c</fullName>
    <label>Agrees to Referral Reimbursement</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>