force-app/main/default/objects/Study_Site__c/fields/Approved_Lng__c.field-meta.xml
<CustomField>
    <fullName>Approved_Lng__c</fullName>
    <label>Approved Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>