force-app/main/default/objects/Study_Site__c/fields/Banner_Display_Offset_Time__c.field-meta.xml
<CustomField>
    <fullName>Banner_Display_Offset_Time__c</fullName>
    <label>Banner Display Offset Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
                <default>true</default>
                <label>15</label>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>