force-app/main/default/objects/Study_Site__c/fields/Billable_Code_CRM_Number__c.field-meta.xml
<CustomField>
    <fullName>Billable_Code_CRM_Number__c</fullName>
    <description>HCP/Physician Billable Code CRM Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP/Physician Billable Code CRM Number</inlineHelpText>
    <label>Billable Code (CRM Number)</label>

    <type>TextArea</type>
</CustomField>