force-app/main/default/objects/Study_Site__c/fields/Block_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Block_Outreach__c</fullName>
    <formula>Clinical_Trial_Profile__r.Block_Outreach__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Outreach</label>
    <type>Checkbox</type>
</CustomField>