force-app/main/default/objects/Study_Site__c/fields/Chart_Review__c.field-meta.xml
<CustomField>
    <fullName>Chart_Review__c</fullName>
    <formula>Clinical_Trial_Profile__r.Chart_Review__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trial&#39;s HCP/Physician Chart Review Amount</inlineHelpText>
    <label>Chart Review</label>
    <precision>18</precision>
    <scale>2</scale>

    <type>Currency</type>
</CustomField>