force-app/main/default/objects/Study_Site__c/fields/Cleaned_Study_Key__c.field-meta.xml
<CustomField>
    <fullName>Cleaned_Study_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cleaned Study Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>