force-app/main/default/objects/Study_Site__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <description>Connects the study site to the primary study that it relates to</description>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipName>Study_Site_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>

    <type>MasterDetail</type>
</CustomField>