force-app/main/default/objects/Study_Site__c/fields/Completed_training__c.field-meta.xml
<CustomField>
    <fullName>Completed_training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed training</label>
    <type>Checkbox</type>
</CustomField>