force-app/main/default/objects/Study_Site__c/fields/E_Consent_Vendor__c.field-meta.xml
<CustomField>
    <fullName>E_Consent_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Consent Vendor</label>
    <referenceTo>E_Consent_Vendor__c</referenceTo>
    <relationshipLabel>Study Sites</relationshipLabel>
    <relationshipName>Study_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>