force-app/main/default/objects/Study_Site__c/fields/ECOA_Site_Guid__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Site_Guid__c</fullName>
    <label>ECOA Site Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>