force-app/main/default/objects/Study_Site__c/fields/Enable_for_Call_Center_Support__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Call_Center_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for Call Center Support</label>
    <type>Checkbox</type> 
</CustomField>