force-app/main/default/objects/Study_Site__c/fields/Enable_RP_Outreach_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_RP_Outreach_Email__c</fullName>
    <formula>Clinical_Trial_Profile__r.Enable_RP_Outreach_Email__c</formula>
    <label>Enable RP Outreach Email</label>
    <type>Checkbox</type>
</CustomField>