force-app/main/default/objects/Study_Site__c/fields/Enrollment_Actual__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enrollment Actual</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>