force-app/main/default/objects/Study_Site__c/fields/Enrollment_Actual_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Actual_to_Target__c</fullName>
    <formula>Enrollment_Actual__c-Enrollment_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual- Target</inlineHelpText>
    <label>Enrollment Actual to Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>