force-app/main/default/objects/Study_Site__c/fields/Enrollment_End_Date2__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_End_Date2__c</fullName>
    <formula>Clinical_Trial_Profile__r.Estimated_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Enrollment End Date</label>
    <type>Date</type>
</CustomField>