force-app/main/default/objects/Study_Site__c/fields/Enrollment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP/Physician Enrollment End Date</inlineHelpText>
    <label>Enrollment End Date</label>
    <type>Date</type>
</CustomField>