force-app/main/default/objects/Study_Site__c/fields/Enrollment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP/Physician Enrollment Start Date</inlineHelpText>
    <label>Enrollment Start Date</label>
    <type>Date</type>
</CustomField>