force-app/main/default/objects/Study_Site__c/fields/Enrollment_Target__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enrollment Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>