force-app/main/default/objects/Study_Site__c/fields/First_Reminder__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder__c</fullName>
    <defaultValue>24</defaultValue>
    <label>First Reminder</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>