force-app/main/default/objects/Study_Site__c/fields/HCP_Contacted_Potential_Participant__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contacted_Potential_Participant__c</fullName>
    <formula>Clinical_Trial_Profile__r.HCP_Contacted_Potential_Participant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trial&#39;s HCP/Physician HCP Contacted Potential Participant Amount</inlineHelpText>
    <label>HCP Contacted Potential Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>