force-app/main/default/objects/Study_Site__c/fields/Include_PII_on_Export__c.field-meta.xml
<CustomField>
    <fullName>Include_PII_on_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include PII on Export</label>
    <type>Checkbox</type>
</CustomField>