force-app/main/default/objects/Study_Site__c/fields/IQVIA_intervention_required__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_intervention_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA intervention required</label>
    <type>Checkbox</type>
</CustomField>