force-app/main/default/objects/Study_Site__c/fields/Is_Patient_Visit_Batch_Running__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Visit_Batch_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient Visit Batch Running</label>
    <type>Checkbox</type> 
</CustomField>