force-app/main/default/objects/Study_Site__c/fields/is_PI_Site_Country_Same__c.field-meta.xml
<CustomField>
    <fullName>is_PI_Site_Country_Same__c</fullName>
    <formula>Site__r.BillingCountry ==  Principal_Investigator__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is PI &amp; Site Country Same</label>
    <type>Checkbox</type>
</CustomField>