force-app/main/default/objects/Study_Site__c/fields/Is_Virtual_Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Study_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Study Site</label>

    <type>Checkbox</type>
</CustomField>