force-app/main/default/objects/Study_Site__c/fields/Medical_Record_Upload__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, no upload will be allowed for participants for this study site.</inlineHelpText>
    <label>Medical Record Upload</label>
    <type>Checkbox</type>
</CustomField>