force-app/main/default/objects/Study_Site__c/fields/Messages_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>Messages_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messages Are Available</label>
    <type>Checkbox</type>
</CustomField>