force-app/main/default/objects/Study_Site__c/fields/Opt_in_for_warm_transfer__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_for_warm_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in for warm transfer</label>
    <type>Checkbox</type>
</CustomField>