force-app/main/default/objects/Study_Site__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <formula>Clinical_Trial_Profile__r.Orientation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trial&#39;s HCP/Physician Orientation Amount</inlineHelpText>
    <label>Orientation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>