force-app/main/default/objects/Study_Site__c/fields/Override_PI_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_PI_Referral_Status__c</fullName>
    <label>PI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Accepted (Admin)</fullName>
                <isActive>false</isActive>
                <label>Accepted (Admin)</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Active (Admin)</fullName>
                <isActive>false</isActive>
                <label>Active (Admin)</label>
            </value>
            <value>
                <fullName>Deactivated (Admin)</fullName>
                <isActive>false</isActive>
                <label>Deactivated (Admin)</label>
            </value>
            <value>
                <fullName>Declined (Acceptance)</fullName>
                <isActive>false</isActive>
                <label>Declined (Acceptance)</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>Non-Responsive (Admin)</fullName>
                <isActive>false</isActive>
                <label>Non-Responsive (Admin)</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>On Hold (Admin)</fullName>
                <isActive>false</isActive>
                <label>On Hold (Admin)</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>