force-app/main/default/objects/Study_Site__c/fields/Override_Status_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Override_Status_Updated_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Status Updated By</label>
    <length>85</length>
    <type>Text</type>
</CustomField>