force-app/main/default/objects/Study_Site__c/fields/Override_Study_Site_Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Study_Site_Recruitment_Status__c</fullName>
    <label>Override Study Site Recruitment Status</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actively Enrolling</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Enrollment Closed</fullName>
            </value>
            <value>
                <fullName>No_Longer_Enrolling</fullName>
                <label>No Longer Enrolling</label>
            </value>
            <value>
                <fullName>PI cannot accept referrals based on Site status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>