force-app/main/default/objects/Study_Site__c/fields/Participant_DOB_format__c.field-meta.xml
<CustomField>
    <fullName>Participant_DOB_format__c</fullName>
    <defaultValue>&quot;DD-MM-YYYY&quot;</defaultValue>
    <label>Participant DOB format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DD-MM-YYYY</fullName>
            </value>
            <value>
                <fullName>MM-YYYY</fullName>
            </value>
            <value>
                <fullName>YYYY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>