force-app/main/default/objects/Study_Site__c/fields/PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>PI_Contact__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;&amp;Principal_Investigator__c , Principal_Investigator__r.FirstName&amp;&quot; &quot; &amp;Principal_Investigator__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Contact</label>
    <type>Text</type>
</CustomField>