force-app/main/default/objects/Study_Site__c/fields/PI_Name__c.field-meta.xml
<CustomField>
    <fullName>PI_Name__c</fullName>
    <description>This is formula field for using reports to show different country for pi and site staff</description>
    <formula>if(is_PI_Site_Country_Same__c == false, HYPERLINK(&quot;/&quot;&amp; Principal_Investigator__c ,Principal_Investigator__r.Full_Name__c), &apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Name</label>
    <type>Text</type>
</CustomField>