force-app/main/default/objects/Study_Site__c/fields/PI_Pays_for_Referral_Activity__c.field-meta.xml
<CustomField>
    <fullName>PI_Pays_for_Referral_Activity__c</fullName>
    <defaultValue>&#39;Yes&#39;</defaultValue>
    <inlineHelpText>HCP/Physician Sponsor Pays for Referral Activity Y N</inlineHelpText>
    <label>PI Pays for Referral Activity</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>