force-app/main/default/objects/Study_Site__c/fields/PI_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>PI_Status_Reason__c</fullName>
    <inlineHelpText>Reasons why PI suspends enrollment for a clinical trial</inlineHelpText>
    <label>PI Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Hold</fullName>
            </value>
            <value>
                <fullName>Supply/resupply of investigational product</fullName>
            </value>
            <value>
                <fullName>Supply/resupply of Study Materials (Lab Kits)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>