force-app/main/default/objects/Study_Site__c/fields/Pin_Point_ProjectId__c.field-meta.xml
<CustomField>
    <fullName>Pin_Point_ProjectId__c</fullName>
    <label>Pin Point ProjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>