force-app/main/default/objects/Study_Site__c/fields/Prescreen__c.field-meta.xml
<CustomField>
    <fullName>Prescreen__c</fullName>
    <formula>Clinical_Trial_Profile__r.Prescreen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trial&#39;s HCP/Physician Prescreen Amount</inlineHelpText>
    <label>Prescreen</label>
    <precision>18</precision>
    <scale>2</scale>

    <type>Currency</type>
</CustomField>