force-app/main/default/objects/Study_Site__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Study Sites (Primary Contact)</relationshipLabel>
    <relationshipName>Study_Sites_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>