force-app/main/default/objects/Study_Site__c/fields/Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key__c</fullName>
    <description>STDY_SITE_KEY + INVSTGR_KEY</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>STDY_SITE_KEY + INVSTGR_KEY</inlineHelpText>
    <label>Primary Key</label>
    <length>255</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>