force-app/main/default/objects/Study_Site__c/fields/Primary_Key_ePR__c.field-meta.xml
<CustomField>
    <fullName>Primary_Key_ePR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Primary Key ePR</label>
    <length>255</length>

    <type>Text</type>
</CustomField>