force-app/main/default/objects/Study_Site__c/fields/Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Investigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PI&#39;s Study Sites</relationshipLabel>
    <relationshipName>Study_Site</relationshipName>
    <type>Lookup</type>
</CustomField>