force-app/main/default/objects/Study_Site__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Code</label>
    <type>TextArea</type>
</CustomField>