force-app/main/default/objects/Study_Site__c/fields/Protocol_Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Country_Id__c</fullName>
    <description>CTMS Country Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Protocol Country Id</label>
    <length>50</length>

    <type>Text</type>
    <unique>true</unique>
</CustomField>