force-app/main/default/objects/Study_Site__c/fields/Protocol_ID__c.field-meta.xml
<CustomField>
    <fullName>Protocol_ID__c</fullName>
    <formula>Clinical_Trial_Profile__r.Protocol_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clinical Trial Profile&#39;s Protocol Id</inlineHelpText>
    <label>Protocol ID</label>

    <type>Text</type>
</CustomField>