force-app/main/default/objects/Study_Site__c/fields/Radius_for_Participation__c.field-meta.xml
<CustomField>
    <fullName>Radius_for_Participation__c</fullName>
    <inlineHelpText>How far will we allow an HCP to search for a participating PI</inlineHelpText>
    <label>Radius for Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>