force-app/main/default/objects/Study_Site__c/fields/Radius_Type__c.field-meta.xml
<CustomField>
    <fullName>Radius_Type__c</fullName>
    <label>Radius Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Kilometers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>