force-app/main/default/objects/Study_Site__c/fields/Ready_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Training</label>
    <type>Checkbox</type>
</CustomField>