force-app/main/default/objects/Study_Site__c/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <label>CTMS Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved for SSV</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Conditional Selected</fullName>
            </value>
            <value>
                <fullName>Contacted (Feasibility)</fullName>
            </value>
            <value>
                <fullName>Contacted (Site ID)</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Enrollment Closed</fullName>
            </value>
            <value>
                <fullName>Enrollment On Hold</fullName>
            </value>
            <value>
                <fullName>Enrollment Open</fullName>
            </value>
            <value>
                <fullName>Essential Documents in place</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Interested (Feasibility)</fullName>
            </value>
            <value>
                <fullName>Interested (Site ID)</fullName>
            </value>
            <value>
                <fullName>Non-responder (Feasibility)</fullName>
            </value>
            <value>
                <fullName>Non-responder (Site ID)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Feasibility)</fullName>
            </value>
            <value>
                <fullName>Not Interested (Site ID)</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Permanently Closed</fullName>
            </value>
            <value>
                <fullName>Prematurely Closed</fullName>
            </value>
            <value>
                <fullName>Preselected</fullName>
            </value>
            <value>
                <fullName>Ready for Initiation</fullName>
            </value>
            <value>
                <fullName>Regulatory Green Light</fullName>
            </value>
            <value>
                <fullName>Regulatory Initiation</fullName>
            </value>
            <value>
                <fullName>Rejected for SSV</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Targeted</fullName>
            </value>
            <value>
                <fullName>Unsure (Feasibility)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>