force-app/main/default/objects/Study_Site__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <formula>Clinical_Trial_Profile__r.Referral__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Trial&#39;s HCP/Physician Referral Amount</inlineHelpText>
    <label>Referral</label>
    <precision>18</precision>
    <scale>2</scale>

    <type>Currency</type>
</CustomField>