force-app/main/default/objects/Study_Site__c/fields/ReferralNetworkId__c.field-meta.xml
<CustomField>
    <fullName>ReferralNetworkId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Network</label>
    <referenceTo>Referral_Network__c</referenceTo>
    <relationshipLabel>Study Sites</relationshipLabel>
    <relationshipName>Study_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>