force-app/main/default/objects/Study_Site__c/fields/Review_Board_Approval__c.field-meta.xml
<CustomField>
    <fullName>Review_Board_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Board Approval</label>
    <type>Checkbox</type>
</CustomField>