force-app/main/default/objects/Study_Site__c/fields/Scheduling_vendors__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_vendors__c</fullName>
    <label>Scheduling Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LifeLink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>