force-app/main/default/objects/Study_Site__c/fields/Second_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Second Reminder</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>