force-app/main/default/objects/Study_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Study Sites</relationshipLabel>
    <relationshipName>Study_Sites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>

    <type>MasterDetail</type>
</CustomField>