force-app/main/default/objects/Study_Site__c/fields/Site_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Activation_Status__c</fullName>
    <label>Site Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Activated (Admin)</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
                <default>true</default>
                <label>Deactivated</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Deactivated (Admin)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>