force-app/main/default/objects/Study_Site__c/fields/Site_Information_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Site_Information_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if the study site completed the site form</description>
    <label>Site Information Form Completed</label>
    <type>Checkbox</type>
</CustomField>