force-app/main/default/objects/Study_Site__c/fields/Site_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Site__c , Site__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>

    <type>Text</type>
</CustomField>