force-app/main/default/objects/Study_Site__c/fields/Site_Staff__c.field-meta.xml
<CustomField>
    <fullName>Site_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to study site delegate</description>
    <label>Site Staff</label>
    <referenceTo>Site_Staff__c</referenceTo>
    <relationshipLabel>Study Sites</relationshipLabel>
    <relationshipName>Study_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>