force-app/main/default/objects/Study_Site__c/fields/SiteGuid__c.field-meta.xml
<CustomField>
    <fullName>SiteGuid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SiteGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>