force-app/main/default/objects/Study_Site__c/fields/Skip_to_Eligibility_Passed__c.field-meta.xml
<CustomField>
    <fullName>Skip_to_Eligibility_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip to Eligibility Passed</label>
    <type>Checkbox</type>
</CustomField>