force-app/main/default/objects/Study_Site__c/fields/SMS_Are_Available__c.field-meta.xml
<CustomField>
    <fullName>SMS_Are_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Are Available</label>
    <type>Checkbox</type>
</CustomField>