force-app/main/default/objects/Study_Site__c/fields/SPNL_LN_assignment__c.field-meta.xml
<CustomField>
    <fullName>SPNL_LN_assignment__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>SPNL LN (assignment)</label>
    <type>TextArea</type>
</CustomField>