force-app/main/default/objects/Study_Site__c/fields/Sponsor_Pays_for_Referral_Activity__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Pays_for_Referral_Activity__c</fullName>
    <formula>TEXT(Clinical_Trial_Profile__r.Sponsor_Pays_for_Referral_Activity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Pays for Referral Activity</label>

    <type>Text</type>
</CustomField>