force-app/main/default/objects/Study_Site__c/fields/Study_AWS__c.field-meta.xml
<CustomField>
    <fullName>Study_AWS__c</fullName>
    <label>Study AWS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>